# pixienn

./: .gitignore  CMakeLists.txt  README.md  TODO.md
.github/workflows/: build.yml
ci/: Jenkinsfile
cmake/: FindCUDNN.cmake  FindGMock.cmake  FindHarfBuzz.cmake  FindPango.cmake  Pixienn.cmake  PixiennLibs.cmake  PixiennTrain.cmake
docs/: Doxyfile  overview.md
include/: Activation.cuh  Activation.h  ActivationKernels.cuh  ActivationTypes.h  Adam.cuh  AvgPoolLayer.h  BatchLoader.h  BatchNorm.h  BatchNormAlgo.h  BatchNormCuda.h  BatchNormLayer.h  BiasKernels.cuh  Box.h  Buffer.h  BurnInLRPolicy.h  CRC32.h  CenterNetLayer.h  CenterNetTargetBuilder.h  ColorMaps.h  Common.h  ConfusionMatrix.h  ConnAlgo.h  ConnLayer.h  ConstantLRPolicy.h  ConvAlgo.h  ConvCuda.h  ConvLayer.h  CosineLRPolicy.h  CpuBuffer.h  CpuUtil.h  Cublas.h  CudaAllocator.h  CudaBuffer.h  CudaError.h  CudaStorage.h  CudaTensor.cuh  CudaUtils.cuh  CudaVector.h  Cudnn.h  DarkBox.h  (+72 more)
include/cuda/: Adam.h  AvgPoolLayer.h  BatchNormLayer.h  CenterNetLayer.h  ConnLayer.h  ConvLayer.h  DetectLayer.h  DropoutLayer.h  Layer.h  MaxPoolLayer.h  Model.h  RegionLayer.h  RouteLayer.h  ShortcutLayer.h  SoftmaxLayer.h  UpsampleLayer.h  Validator.h  YoloLayer.h
proto/: CMakeLists.txt  event.proto  summary.proto  types.proto
python/: compile_model_spec.py  conv.py  requirements.txt  runner.py
python/specs/: basic_conv_test.yaml  model_test.yaml  test_1.yaml
resources/cfg/: resnet18-cfg.yml  tiny-yolo-voc-cfg.yml  yolo-nano-cfg.yml  yolov1-tiny-cfg.yml  yolov3-cfg.yml  yolov3-tiny-cfg.yml  yolov3-tiny-voc-cfg.yml  yolov7-cfg.yml
resources/data/voc/: train-200.txt  val-40.txt  val-5.txt
resources/images/: abbeyroad-f32.tiff  abbeyroad-u16.tiff  abbeyroad-u32.tiff  abbeyroad-u8.tiff
resources/models/: resnet18.yml  tiny-yolo-voc.yml  yolo-nano.yml  yolov1-tiny.yml  yolov1.yml  yolov3-tiny-voc.yml  yolov3-tiny.yml  yolov3.yml  yolov7.yml
ruby/: Gemfile  Rakefile  config.yml  load_config.rb
ruby/scripts/: darknet2px.rb  image_to_darknet.rb  imagenet1k.rb  imagenet_to_darknet.rb  voc-1000.rb  voc2darknet.rb
ruby/spec/: constants.rb  tiny_yolov1_spec.rb  tiny_yolov3_spec.rb  yolov3_spec.rb
ruby/utils/: darknet.rb
shell/: coco.sh  voc.sh
src/: Activation.cpp  Activation.cu  ActivationKernels.cu  Adam.cu  BatchLoader.cpp  BatchNorm.cpp  BatchNormAlgo.cpp  BatchNormLayer.cpp  BiasKernels.cu  Box.cpp  Buffer.cpp  BurnInLRPolicy.cpp  CRC32.cpp  CenterNetTargetBuilder.cpp  ColorMaps.cpp  ConfusionMatrix.cpp  ConnAlgo.cpp  ConnLayer.cpp  ConstantLRPolicy.cpp  ConvAlgo.cpp  ConvLayer.cpp  ConvLayer.cu  CosineLRPolicy.cpp  CpuBuffer.cpp  CpuUtil.cpp  CudaBuffer.cpp  CudaError.cpp  CudaUtils.cu  DarkBox.cpp  Darknet.cpp  DetectAlgo.cpp  DetectLayer.cpp  Detection.cpp  Error.cpp  FileUtil.cpp  Gemm.cpp  GroundTruth.cpp  Image.cpp  ImageAugmenter.cpp  ImageBatch.cpp  (+40 more)
src/check_cuda/: check_cuda.cu
tests/: CMakeLists.txt  activations.cpp  augment.cpp  batchnorm.cpp  batchnormal.cpp  blas.cpp  connected.cpp  convolve.cpp  darkbox.cpp  detect.cpp  imagebatch.cpp  main.cpp  maxpool.cpp  smoothsteps.cpp  tensor.cpp  tiff.cpp  upsample.cpp  vector.cpp
tests/include/: common.h
tests/src/: activations.cpp  box.cpp  centernet.cpp  confuse.cpp  cosine.cpp  crc32.cpp  imagebatch.cpp  math.cpp  model.cpp  sigmoid.cpp  smoothcycle.cpp  smoothsteps.cpp  steppedlr.cpp  vector.cpp
tools/: Gemfile  Rakefile  compare_tensors.rb  darknet.rb
tools/integration_tests/: constants.rb  tiny_yolov1_spec.rb  tiny_yolov3_spec.rb  yolov3_spec.rb
